--- a/src/sass/components/_cv.scss
+++ b/src/sass/components/_cv.scss
@@ -21,7 +21,7 @@ body {
   }
 
   @media print {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     height: auto;
   }
 }
@@ -133,6 +133,10 @@ h1 {
   margin-top: 0;
   margin-bottom: 0;
 
+  @include mq($from: cv-s) {
+    grid-column-end: 2;
+  }
+
   @media print {
     font-size: 5rem;
     margin: 0;
@@ -148,6 +152,10 @@ h2 {
   grid-column-end: 3;
   grid-row-start: 2;
   margin-bottom: .6rem;
+
+  @include mq($from: cv-s) {
+    grid-column-end: 2;
+  }
 
   @media print {
     font-size: 2rem;
@@ -192,6 +200,7 @@ h4 {
 
   @media print {
     margin-top: .4rem;
+    margin-bottom: .2rem;
   }
 }
 
@@ -211,7 +220,7 @@ h4 {
 
   @include mq($from: cv-m) {
     grid-column-end: 3;
-    padding-right: 24rem;
+    padding-right: 6rem;
   }
 
   @media print {
@@ -307,7 +316,7 @@ ul {
   font-style: italic;
 
   @media print {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -315,7 +324,7 @@ ul {
   font-size: 1.4rem;
 
   @media print {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -338,7 +347,7 @@ ul {
   }
 
   @media print {
-    min-height: 2rem;
+    min-height: 0;
   }
 }
 
@@ -396,6 +405,12 @@ ul {
   display: block;
 
   @include mq($from: cv-m) {
+    display: none;
+  }
+}
+
+#top {
+  @media print {
     display: none;
   }
 }
